Applies refactoring